# llm-planning-graph

./: .gitignore  Dockerfile.dev  Dockerfile.scripts  README.md  docker-compose.yml  prefix.Dockerfile  pyproject.toml
adapters/graph_extractor/: adapter_config.json  adapter_model.safetensors
adapters/graph_extractor/checkpoint-3/: README.md  rng_state.pth  trainer_state.json
api/: main.py
demo/: app.py
deploy/: routing_rules.json
eval/: README.md  compare.py  metrics.py  run_eval.py
eval/experiments/project_01_job_copilot/: objectives.md  prompt.txt
eval/experiments/project_02_price_tracker/: objectives.md  prompt.txt
eval/experiments/project_03_content_summarizer/: objectives.md  prompt.txt
eval/experiments/project_04_asthma_ai/: objectives.md  prompt.txt
eval/experiments/project_05_autonomous_research_agent/: comparison.md  objectives.md  prompt.txt
planninggraph/: __init__.py  extractor.py  failure.py  graph.py  maintenance.py  schema.py  viz.py
planninggraph/prompts/: __init__.py  extraction_system.txt
ppt/: Team-16-v2.pptx  Team-16.pptx
ppt/scripts/: build_slides.py  charts.py  theme.py
prefix_tuning/: README.md  common.py  corpus_to_examples.py  format_training_examples.py  graph_classifier.py  runtime.py  train.py  train_graph_models.py
proposal/: codebase-framework.txt
scripts/: bootstrap_training_data.py  combine_training_datasets.py  create_planning_docs_training_examples.py  eda.py  expand_planning_docs_dataset.py  fetch_corpus.py  finetune.py  validate_training_data.py
tests/: conftest.py  test_planninggraph.py
(+36 files in other folders)
